// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PRs/List/List Default smoke-test 1`] = `
<div class>
  <div class="prose">
    <h4>
      Open PRs
    </h4>
  </div>
  <ul class="divide-y divide-neutral-600">
    <li class="flex p-2 pt-4 hover:bg-neutral-700 cursor-pointer">
      <svg xmlns="http://www.w3.org/2000/svg"
           viewbox="0 0 16 16"
           class="h-5 w-5 pt-1 flex-none fill-success"
      >
        <path d="M1.5 3.25a2.25 2.25 0 1 1 3 2.122v5.256a2.251 2.251 0 1 1-1.5 0V5.372A2.25 2.25 0 0 1 1.5 3.25m5.677-.177L9.573.677A.25.25 0 0 1 10 .854V2.5h1A2.5 2.5 0 0 1 13.5 5v5.628a2.251 2.251 0 1 1-1.5 0V5a1 1 0 0 0-1-1h-1v1.646a.25.25 0 0 1-.427.177L7.177 3.427a.25.25 0 0 1 0-.354M3.75 2.5a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5m0 9.5a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5m8.25.75a.75.75 0 1 0 1.5 0a.75.75 0 0 0-1.5 0">
        </path>
      </svg>
      <div class="ml-3 overflow-hidden grow text-xs text-neutral-content">
        <div class="text-sm text-base-content">
          short title
        </div>
        <ul class="pt-2">
          <li class="align-middle inline mr-3">
            <svg xmlns="http://www.w3.org/2000/svg"
                 class="h-3 w-3 pt-0 flex-none fill-base-content inline-block"
                 viewbox="0 0 16 16"
            >
              <path d="M1 2.75C1 1.784 1.784 1 2.75 1h10.5c.966 0 1.75.784 1.75 1.75v7.5A1.75 1.75 0 0 1 13.25 12H9.06l-2.573 2.573A1.458 1.458 0 0 1 4 13.543V12H2.75A1.75 1.75 0 0 1 1 10.25Zm1.75-.25a.25.25 0 0 0-.25.25v7.5c0 .138.112.25.25.25h2a.75.75 0 0 1 .75.75v2.19l2.72-2.72a.749.749 0 0 1 .53-.22h4.5a.25.25 0 0 0 .25-.25v-7.5a.25.25 0 0 0-.25-.25Z">
              </path>
            </svg>
            2
          </li>
          <li class="inline mr-3">
            opened 7 days ago
          </li>
          <li class="inline">
            DanConwayDev
          </li>
        </ul>
      </div>
    </li>
    <li class="flex p-2 pt-4 hover:bg-neutral-700 cursor-pointer">
      <svg xmlns="http://www.w3.org/2000/svg"
           viewbox="0 0 16 16"
           class="h-5 w-5 pt-1 flex-none fill-success"
      >
        <path d="M1.5 3.25a2.25 2.25 0 1 1 3 2.122v5.256a2.251 2.251 0 1 1-1.5 0V5.372A2.25 2.25 0 0 1 1.5 3.25m5.677-.177L9.573.677A.25.25 0 0 1 10 .854V2.5h1A2.5 2.5 0 0 1 13.5 5v5.628a2.251 2.251 0 1 1-1.5 0V5a1 1 0 0 0-1-1h-1v1.646a.25.25 0 0 1-.427.177L7.177 3.427a.25.25 0 0 1 0-.354M3.75 2.5a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5m0 9.5a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5m8.25.75a.75.75 0 1 0 1.5 0a.75.75 0 0 0-1.5 0">
        </path>
      </svg>
      <div class="ml-3 overflow-hidden grow text-xs text-neutral-content">
        <div class="text-sm text-base-content">
          rather long title that goes on and on and on and on and on and on...
        </div>
        <ul class="pt-2">
          <li class="inline mr-3">
            opened a minute ago
          </li>
          <li class="inline">
            DanConwayDev
          </li>
        </ul>
      </div>
    </li>
    <li class="flex p-2 pt-4 hover:bg-neutral-700 cursor-pointer">
      <svg xmlns="http://www.w3.org/2000/svg"
           viewbox="0 0 16 16"
           class="h-5 w-5 pt-1 flex-none fill-success"
      >
        <path d="M1.5 3.25a2.25 2.25 0 1 1 3 2.122v5.256a2.251 2.251 0 1 1-1.5 0V5.372A2.25 2.25 0 0 1 1.5 3.25m5.677-.177L9.573.677A.25.25 0 0 1 10 .854V2.5h1A2.5 2.5 0 0 1 13.5 5v5.628a2.251 2.251 0 1 1-1.5 0V5a1 1 0 0 0-1-1h-1v1.646a.25.25 0 0 1-.427.177L7.177 3.427a.25.25 0 0 1 0-.354M3.75 2.5a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5m0 9.5a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5m8.25.75a.75.75 0 1 0 1.5 0a.75.75 0 0 0-1.5 0">
        </path>
      </svg>
      <div class="ml-3 overflow-hidden grow text-xs text-neutral-content">
        <div class="text-sm text-base-content">
          LongNameLongNameLongNameLongNameLongNameLongNameLongNameLongNameL...
        </div>
        <ul class="pt-2">
          <li class="align-middle inline mr-3">
            <svg xmlns="http://www.w3.org/2000/svg"
                 class="h-3 w-3 pt-0 flex-none fill-base-content inline-block"
                 viewbox="0 0 16 16"
            >
              <path d="M1 2.75C1 1.784 1.784 1 2.75 1h10.5c.966 0 1.75.784 1.75 1.75v7.5A1.75 1.75 0 0 1 13.25 12H9.06l-2.573 2.573A1.458 1.458 0 0 1 4 13.543V12H2.75A1.75 1.75 0 0 1 1 10.25Zm1.75-.25a.25.25 0 0 0-.25.25v7.5c0 .138.112.25.25.25h2a.75.75 0 0 1 .75.75v2.19l2.72-2.72a.749.749 0 0 1 .53-.22h4.5a.25.25 0 0 0 .25-.25v-7.5a.25.25 0 0 0-.25-.25Z">
              </path>
            </svg>
            1
          </li>
          <li class="inline mr-3">
            opened 3 months ago
          </li>
          <li class="inline">
            DanConwayDev
          </li>
        </ul>
      </div>
    </li>
  </ul>
</div>
`;

exports[`PRs/List/List Empty smoke-test 1`] = `
<div class>
  <div class="prose">
    <h4>
      Open PRs
    </h4>
  </div>
  <p class="prose">
    None
  </p>
  <ul class="divide-y divide-neutral-600">
  </ul>
</div>
`;

exports[`PRs/List/List Loading smoke-test 1`] = `
<div class>
  <div class="prose">
    <h4>
      Open PRs
    </h4>
  </div>
  <ul class="divide-y divide-neutral-600">
    <li class="flex p-2 pt-4 ">
      <div class="h-5 w-5 pt-1 flex-none skeleton">
      </div>
      <div class="ml-3 overflow-hidden grow text-xs text-neutral-content">
        <div class="h-5 w-60 pt-1 flex-none skeleton">
        </div>
        <div class="h-3 w-40 mt-3 mb-1 flex-none skeleton">
        </div>
      </div>
    </li>
    <li class="flex p-2 pt-4 ">
      <div class="h-5 w-5 pt-1 flex-none skeleton">
      </div>
      <div class="ml-3 overflow-hidden grow text-xs text-neutral-content">
        <div class="h-5 w-60 pt-1 flex-none skeleton">
        </div>
        <div class="h-3 w-40 mt-3 mb-1 flex-none skeleton">
        </div>
      </div>
    </li>
    <li class="flex p-2 pt-4 ">
      <div class="h-5 w-5 pt-1 flex-none skeleton">
      </div>
      <div class="ml-3 overflow-hidden grow text-xs text-neutral-content">
        <div class="h-5 w-60 pt-1 flex-none skeleton">
        </div>
        <div class="h-3 w-40 mt-3 mb-1 flex-none skeleton">
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`PRs/List/List No Title smoke-test 1`] = `
<div class>
  <ul class="divide-y divide-neutral-600">
    <li class="flex p-2 pt-4 hover:bg-neutral-700 cursor-pointer">
      <svg xmlns="http://www.w3.org/2000/svg"
           viewbox="0 0 16 16"
           class="h-5 w-5 pt-1 flex-none fill-success"
      >
        <path d="M1.5 3.25a2.25 2.25 0 1 1 3 2.122v5.256a2.251 2.251 0 1 1-1.5 0V5.372A2.25 2.25 0 0 1 1.5 3.25m5.677-.177L9.573.677A.25.25 0 0 1 10 .854V2.5h1A2.5 2.5 0 0 1 13.5 5v5.628a2.251 2.251 0 1 1-1.5 0V5a1 1 0 0 0-1-1h-1v1.646a.25.25 0 0 1-.427.177L7.177 3.427a.25.25 0 0 1 0-.354M3.75 2.5a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5m0 9.5a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5m8.25.75a.75.75 0 1 0 1.5 0a.75.75 0 0 0-1.5 0">
        </path>
      </svg>
      <div class="ml-3 overflow-hidden grow text-xs text-neutral-content">
        <div class="text-sm text-base-content">
          short title
        </div>
        <ul class="pt-2">
          <li class="align-middle inline mr-3">
            <svg xmlns="http://www.w3.org/2000/svg"
                 class="h-3 w-3 pt-0 flex-none fill-base-content inline-block"
                 viewbox="0 0 16 16"
            >
              <path d="M1 2.75C1 1.784 1.784 1 2.75 1h10.5c.966 0 1.75.784 1.75 1.75v7.5A1.75 1.75 0 0 1 13.25 12H9.06l-2.573 2.573A1.458 1.458 0 0 1 4 13.543V12H2.75A1.75 1.75 0 0 1 1 10.25Zm1.75-.25a.25.25 0 0 0-.25.25v7.5c0 .138.112.25.25.25h2a.75.75 0 0 1 .75.75v2.19l2.72-2.72a.749.749 0 0 1 .53-.22h4.5a.25.25 0 0 0 .25-.25v-7.5a.25.25 0 0 0-.25-.25Z">
              </path>
            </svg>
            2
          </li>
          <li class="inline mr-3">
            opened 7 days ago
          </li>
          <li class="inline">
            DanConwayDev
          </li>
        </ul>
      </div>
    </li>
    <li class="flex p-2 pt-4 hover:bg-neutral-700 cursor-pointer">
      <svg xmlns="http://www.w3.org/2000/svg"
           viewbox="0 0 16 16"
           class="h-5 w-5 pt-1 flex-none fill-success"
      >
        <path d="M1.5 3.25a2.25 2.25 0 1 1 3 2.122v5.256a2.251 2.251 0 1 1-1.5 0V5.372A2.25 2.25 0 0 1 1.5 3.25m5.677-.177L9.573.677A.25.25 0 0 1 10 .854V2.5h1A2.5 2.5 0 0 1 13.5 5v5.628a2.251 2.251 0 1 1-1.5 0V5a1 1 0 0 0-1-1h-1v1.646a.25.25 0 0 1-.427.177L7.177 3.427a.25.25 0 0 1 0-.354M3.75 2.5a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5m0 9.5a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5m8.25.75a.75.75 0 1 0 1.5 0a.75.75 0 0 0-1.5 0">
        </path>
      </svg>
      <div class="ml-3 overflow-hidden grow text-xs text-neutral-content">
        <div class="text-sm text-base-content">
          rather long title that goes on and on and on and on and on and on...
        </div>
        <ul class="pt-2">
          <li class="inline mr-3">
            opened a minute ago
          </li>
          <li class="inline">
            DanConwayDev
          </li>
        </ul>
      </div>
    </li>
  </ul>
</div>
`;

exports[`PRs/List/List Partially Loaded smoke-test 1`] = `
<div class>
  <div class="prose">
    <h4>
      Open PRs
    </h4>
  </div>
  <ul class="divide-y divide-neutral-600">
    <li class="flex p-2 pt-4 hover:bg-neutral-700 cursor-pointer">
      <svg xmlns="http://www.w3.org/2000/svg"
           viewbox="0 0 16 16"
           class="h-5 w-5 pt-1 flex-none fill-success"
      >
        <path d="M1.5 3.25a2.25 2.25 0 1 1 3 2.122v5.256a2.251 2.251 0 1 1-1.5 0V5.372A2.25 2.25 0 0 1 1.5 3.25m5.677-.177L9.573.677A.25.25 0 0 1 10 .854V2.5h1A2.5 2.5 0 0 1 13.5 5v5.628a2.251 2.251 0 1 1-1.5 0V5a1 1 0 0 0-1-1h-1v1.646a.25.25 0 0 1-.427.177L7.177 3.427a.25.25 0 0 1 0-.354M3.75 2.5a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5m0 9.5a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5m8.25.75a.75.75 0 1 0 1.5 0a.75.75 0 0 0-1.5 0">
        </path>
      </svg>
      <div class="ml-3 overflow-hidden grow text-xs text-neutral-content">
        <div class="text-sm text-base-content">
          short title
        </div>
        <ul class="pt-2">
          <li class="align-middle inline mr-3">
            <svg xmlns="http://www.w3.org/2000/svg"
                 class="h-3 w-3 pt-0 flex-none fill-base-content inline-block"
                 viewbox="0 0 16 16"
            >
              <path d="M1 2.75C1 1.784 1.784 1 2.75 1h10.5c.966 0 1.75.784 1.75 1.75v7.5A1.75 1.75 0 0 1 13.25 12H9.06l-2.573 2.573A1.458 1.458 0 0 1 4 13.543V12H2.75A1.75 1.75 0 0 1 1 10.25Zm1.75-.25a.25.25 0 0 0-.25.25v7.5c0 .138.112.25.25.25h2a.75.75 0 0 1 .75.75v2.19l2.72-2.72a.749.749 0 0 1 .53-.22h4.5a.25.25 0 0 0 .25-.25v-7.5a.25.25 0 0 0-.25-.25Z">
              </path>
            </svg>
            2
          </li>
          <li class="inline mr-3">
            opened 7 days ago
          </li>
          <li class="inline">
            DanConwayDev
          </li>
        </ul>
      </div>
    </li>
    <li class="flex p-2 pt-4 hover:bg-neutral-700 cursor-pointer">
      <svg xmlns="http://www.w3.org/2000/svg"
           viewbox="0 0 16 16"
           class="h-5 w-5 pt-1 flex-none fill-success"
      >
        <path d="M1.5 3.25a2.25 2.25 0 1 1 3 2.122v5.256a2.251 2.251 0 1 1-1.5 0V5.372A2.25 2.25 0 0 1 1.5 3.25m5.677-.177L9.573.677A.25.25 0 0 1 10 .854V2.5h1A2.5 2.5 0 0 1 13.5 5v5.628a2.251 2.251 0 1 1-1.5 0V5a1 1 0 0 0-1-1h-1v1.646a.25.25 0 0 1-.427.177L7.177 3.427a.25.25 0 0 1 0-.354M3.75 2.5a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5m0 9.5a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5m8.25.75a.75.75 0 1 0 1.5 0a.75.75 0 0 0-1.5 0">
        </path>
      </svg>
      <div class="ml-3 overflow-hidden grow text-xs text-neutral-content">
        <div class="text-sm text-base-content">
          rather long title that goes on and on and on and on and on and on...
        </div>
        <ul class="pt-2">
          <li class="inline mr-3">
            opened a minute ago
          </li>
          <li class="inline">
            DanConwayDev
          </li>
        </ul>
      </div>
    </li>
    <li class="flex p-2 pt-4 ">
      <div class="h-5 w-5 pt-1 flex-none skeleton">
      </div>
      <div class="ml-3 overflow-hidden grow text-xs text-neutral-content">
        <div class="h-5 w-60 pt-1 flex-none skeleton">
        </div>
        <div class="h-3 w-40 mt-3 mb-1 flex-none skeleton">
        </div>
      </div>
    </li>
  </ul>
</div>
`;
